Bug 29804 - Cannot build plymouth if nvidia, radeon or intel drm lib is missing
Summary: Cannot build plymouth if nvidia, radeon or intel drm lib is missing
Status: RESOLVED FIXED
Alias: None
Product: plymouth
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Ray Strode [halfline]
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-25 12:31 UTC by Marc
Modified: 2011-02-01 11:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
makes libdrm_intel, libdrm_radeon, libdrm_nouveau independently optional (11.46 KB, patch)
2011-02-01 00:55 UTC, Lucian Muresan
Details | Splinter Review

Description Marc 2010-08-25 12:31:38 UTC
We should be able to build plymouth even if the nvidia, radeon or intel drm library is missing (i.e.: Hasn't been built into the system).

This would be especially welcomed on minimalistic distros that often only build libraries that are explicitly needed to run a certain application.
Comment 1 Lucian Muresan 2011-02-01 00:55:04 UTC
Created attachment 42800 [details] [review]
makes libdrm_intel, libdrm_radeon, libdrm_nouveau independently optional

Hi, this patch adds the respective configure options to make possible to disable libdrm_intel, libdrm_radeon or libdrm_nouveau independently from each other, even from libkms (which itself also needs libdrm). So the default behaviour is as before, --enable-libdrm_[intel,radeon,nouveau], but they can be changed to --disable. If also --disable-libkms is used, plymouth is built withouth ANY DRMM dependency. On my setup I could successfully build with only libkms or with no DRM at all. Please bear with us users out there which need proprietary nvidia/ATI drivers and also do not need or want to install/build the rest of the DRM cruft it not usable (like on Gentoo when using proprietary drivers) and include this patch in git :-)
Comment 2 Ray Strode [halfline] 2011-02-01 11:34:23 UTC
Thanks, i've commited this with some minor changes:

http://cgit.freedesktop.org/plymouth/commit/?id=22a1273bb2c9dc0d3188b8ed11b0c97bfca6d3ef


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.